New and improved Java and curl samples for the IoT CF (#52)