@@ -5,11 +5,13 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
-import java.nio.charset.StandardCharsets;
 
 import javax.net.ssl.HttpsURLConnection;
 import javax.net.ssl.SSLSocketFactory;
+import javax.xml.bind.DatatypeConverter;
 
 import com.google.gson.JsonSyntaxException;
 
@@ -52,9 +54,8 @@ extends AbstractClient {
 		connection = openConnection(destination);
 
 		if (user != null && password != null) {
-			@SuppressWarnings("restriction")
-			String base64 = new sun.misc.BASE64Encoder()
-				.encode((user + ":" + password).getBytes(StandardCharsets.UTF_8));
+			String base64 = DatatypeConverter
+				.printBase64Binary((user + ":" + password).getBytes(ENCODING));
 			connection.setRequestProperty("Authorization", "Basic " + base64);
 		}
 		else if (sslSocketFactory != null && connection instanceof HttpsURLConnection) {
@@ -100,14 +101,15 @@ extends AbstractClient {
 		connection.setUseCaches(false);
 		connection.setRequestProperty("Content-Type", "application/json");
 
-		InputStream is = connect(connection);
 		try {
-			String response = readString(is);
-			System.out.println(String.format("Response body %1$s", response));
-			return response;
+			Response response = connect(connection);
+			String body = response.getBody();
+
+			System.out.println(String.format("Response [%1$d] %2$s", response.getCode(), body));
+
+			return body;
 		}
 		finally {
-			FileUtil.closeStream(is);
 			disconnect();
 		}
 	}
@@ -123,6 +125,11 @@ extends AbstractClient {
 		}
 	}
 
+	public <T> void doPost(T payload, Class<T> clazz)
+	throws IOException {
+		doPost(jsonParser.toJson(payload));
+	}
+
 	public String doPost(String request)
 	throws IOException {
 
@@ -130,15 +137,16 @@ extends AbstractClient {
 			connect(destination);
 		}
 
-		System.out.println(String.format("Request body %1$s", request));
-
 		connection.setRequestMethod("POST");
 		connection.setDoOutput(true);
 		connection.setDoInput(true);
 		connection.setUseCaches(false);
 		connection.setRequestProperty("Content-Type", "application/json");
 
-		byte[] bytes = request.getBytes(StandardCharsets.UTF_8);
+		System.out.println(String.format("Request %1$s", request));
+		System.out.println();
+
+		byte[] bytes = request.getBytes(ENCODING);
 
 		OutputStream os = connection.getOutputStream();
 		try {
@@ -148,14 +156,15 @@ extends AbstractClient {
 			FileUtil.closeStream(os);
 		}
 
-		InputStream is = connect(connection);
 		try {
-			String response = readString(is);
-			System.out.println(String.format("Response body %1$s", response));
-			return response;
+			Response response = connect(connection);
+			String body = response.getBody();
+
+			System.out.println(String.format("Response [%1$d] %2$s", response.getCode(), body));
+
+			return body;
 		}
 		finally {
-			FileUtil.closeStream(is);
 			disconnect();
 		}
 	}
@@ -168,17 +177,19 @@ extends AbstractClient {
 		System.out.println(String.format("Connect to %1$s", destination));
 		System.out.println();
 
-		URL url = null;
+		URI uri = null;
 		try {
-			url = new URL(destination);
+			URL url = new URL(destination);
+			uri = new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(),
+				url.getPath(), url.getQuery(), null);
 		}
-		catch (MalformedURLException e) {
+		catch (MalformedURLException | URISyntaxException e) {
 			throw new IOException("Invalid HTTPS connection URL specified", e);
 		}
 
 		HttpURLConnection connection = null;
 		try {
-			connection = (HttpsURLConnection) url.openConnection();
+			connection = (HttpsURLConnection) uri.toURL().openConnection();
 		}
 		catch (IOException e) {
 			throw new IOException("Unable to open a HTTP connection", e);
@@ -187,31 +198,35 @@ extends AbstractClient {
 		return connection;
 	}
 
-	private InputStream connect(HttpURLConnection connection)
+	private Response connect(HttpURLConnection connection)
 	throws IOException {
 
 		connection.connect();
 
 		int code = connection.getResponseCode();
 
+		InputStream stream;
 		if (code < HttpURLConnection.HTTP_OK || code >= HttpURLConnection.HTTP_MOVED_PERM) {
-			InputStream errorStream = connection.getErrorStream();
-			String errorResponse = null;
-			try {
-				if (errorStream == null) {
-					errorResponse = connection.getResponseMessage();
-				}
-				else {
-					errorResponse = readString(errorStream);
-				}
-			}
-			finally {
-				FileUtil.closeStream(errorStream);
-			}
-			throw new IOException(errorResponse);
+			stream = connection.getErrorStream();
+		}
+		else {
+			stream = connection.getInputStream();
 		}
 
-		return connection.getInputStream();
+		String body = null;
+		try {
+			if (stream == null) {
+				body = connection.getResponseMessage();
+			}
+			else {
+				body = readString(stream);
+			}
+		}
+		finally {
+			FileUtil.closeStream(stream);
+		}
+
+		return new Response(code, body);
 	}
 
 	private String readString(InputStream stream)
@@ -237,6 +252,27 @@ extends AbstractClient {
 		}
 
 		return sb.toString();
+	}
+
+	private class Response {
+
+		private int code;
+
+		private String body;
+
+		public Response(int code, String body) {
+			this.code = code;
+			this.body = body;
+		}
+
+		public int getCode() {
+			return code;
+		}
+
+		public String getBody() {
+			return body;
+		}
+
 	}
 
 }
